# git

./: .gitignore  README.md
VscodeFile/ai_agent/: .gitignore  README.md  extract_pptx.py  pyproject.toml  说明.md
VscodeFile/ai_agent/config/: default.yaml  mcp_servers.yaml
VscodeFile/ai_agent/skills/code_reviewer/: prompt.md  skill.yaml  tools.py
VscodeFile/ai_agent/skills/pptx_reader/: prompt.md  skill.yaml  tools.py
VscodeFile/ai_agent/skills/web_researcher/: prompt.md  skill.yaml  tools.py
VscodeFile/ai_agent/src/ai_agent/: __init__.py
VscodeFile/ai_agent/src/ai_agent/agent/: __init__.py  app.py  core.py  events.py  history.py  llm.py
VscodeFile/ai_agent/src/ai_agent/cli/: __init__.py  main.py
VscodeFile/ai_agent/src/ai_agent/config/: __init__.py  loader.py  models.py
VscodeFile/ai_agent/src/ai_agent/mcp/: client_manager.py  tool_translator.py
VscodeFile/ai_agent/src/ai_agent/skills/: __init__.py  definition.py  loader.py  manager.py  repository.py
VscodeFile/ai_agent/src/ai_agent/tools/: __init__.py  base.py  registry.py
VscodeFile/ai_agent/src/ai_agent/tools/builtin/: calculator.py  datetime_tool.py  file_ops.py  web_fetch.py  web_search.py
VscodeFile/ai_agent/tests/: conftest.py
VscodeFile/ai_agent/tests/integration/: test_full_loop.py
VscodeFile/ai_agent/tests/unit/: test_config_loader.py  test_skill_manager.py  test_tool_registry.py
Vscode_file/LangChain_demo/: Lc01.ipynb  Lc02.ipynb
Vscode_file/LangGraph_demo/: lg01.py  lg02.py  lg03.py  lg04.py
