[build-system]
requires = ["setuptools>=75.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-agent"
version = "0.1.0"
description = "基于 DeepSeek 的对话式 AI Agent，支持工具调用、技能系统和 MCP 集成"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "MuDl" }]

dependencies = [
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
    "mcp>=1.0.0",
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "httpx>=0.27.0",
    "rich>=13.0.0",
    "click>=8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
    "pytest-mock>=3.14.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
ai-agent = "ai_agent.cli.main:main"
